# differentiable-pelican

./: .copier-answers.yml  .env.local.example  .gitignore  Cargo.toml  Makefile  README.md  development.md  pyproject.toml
.github/workflows/: ci.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01khbvm9r2n3q66x563zkkq9pk.md  is-01khbvmm93dxq3z0chp8dejd86.md  is-01khbvrz46w5g6d11pzs25fw51.md  is-01khbw1mjkem1k3cjt7v84t0wf.md  is-01khbxzjx8vqjbat8f79j8q3fs.md  is-01khbxzqq4xv5mc0syxndj52f0.md  is-01khbxzwghbh99dbjh6mys5ewq.md  is-01khd32kx5s3qvvwqmw6h2eny7.md  (+2 more)
crates/pelican-core/: Cargo.toml
crates/pelican-core/src/: geometry.rs  lib.rs  loss.rs  optimizer.rs  renderer.rs  sdf.rs  svg_export.rs
crates/pelican-core/tests/: integration_test.rs
crates/pelican-wasm/: Cargo.toml
crates/pelican-wasm/src/: lib.rs
docs/: development.md  implementation-progress.md  pelican-plan.md  research-log.md  research-paperbanana.md
docs/design/: differentiable-pelican-spec.md  implementation-progress.md  pelican-plan.md
docs/results/: README.md
images/: LICENSE
orchestration/: playbook.md
src/differentiable_pelican/: __init__.py  cli.py  commands.py  commands_greedy_refine.py  commands_judge.py  commands_optimize.py  commands_refine.py  commands_serve.py  geometry.py  greedy_refine.py  loss.py  optimizer.py  refine.py  renderer.py  sdf.py  svg_export.py  utils.py  validator.py
tests/: test_end_to_end.py  test_validator.py
web/: index.html  main.js
web/pkg/: package.json  pelican_wasm.d.ts  pelican_wasm.js  pelican_wasm_bg.wasm  pelican_wasm_bg.wasm.d.ts
(+72 files in other folders)
