[package]
name = "pelican-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pelican-core = { path = "../pelican-core" }
burn = { version = "0.16", default-features = false, features = ["ndarray", "autodiff"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
